<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/About" 
	android:layout_width="fill_parent"
	android:layout_height ="fill_parent">
	<LinearLayout
	    android:layout_height="wrap_content"
	    android:id="@+id/CreditsLayout"
	    android:layout_width="fill_parent"
	    android:orientation="vertical">
	    <TextView style="@style/CreditsHeader" android:text="@string/credits_title" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_art" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_graphics" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_level_design" />
		<TextView style="@style/CreditsName" android:text="@string/names_devin" />
		<TextView style="@style/CreditsName" android:text="@string/names_matt" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsCategory" android:text="Menus" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsName" android:text="@string/names_devin" />
		<TextView style="@style/CreditsName" android:text="@string/names_matt" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_music" />
		<TextView style="@style/CreditsName" android:text="@string/names_jack" />
		<TextView style="@style/CreditsCategory" android:text="Parsing and XML Formatting" />
		<TextView style="@style/CreditsName" android:text="Zayd Simjee" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_physics" />
		<TextView style="@style/CreditsName" android:text="@string/names_devin" />
		<TextView style="@style/CreditsName" android:text="@string/names_matt" />
		<TextView style="@style/CreditsCategory" android:text="PR" />
		<TextView style="@style/CreditsName" android:text="Michael Yorita" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_sound" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsName" android:text="@string/names_devin" />
		<TextView style="@style/CreditsCategory" android:text="Sound Implementation" />
		<TextView style="@style/CreditsName" android:text="@string/names_matt" />
		<TextView style="@style/CreditsCategory" android:text="Teleporters, Cannons, and other fun features" />
		<TextView style="@style/CreditsName" android:text="@string/names_matt" />
		<TextView style="@style/CreditsCategory" android:text="@string/credits_tools" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsCategory" android:text="User Interface" />
		<TextView style="@style/CreditsName" android:text="@string/names_robert" />
		<TextView style="@style/CreditsFooter" android:text="@string/credits_special_thanks" />
	</LinearLayout>
</ScrollView>