<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/About" 
	android:layout_width="fill_parent"
	android:layout_height ="fill_parent">
	<LinearLayout
		android:orientation="vertical"
  		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
 		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="30dp"
			android:paddingLeft="40dp"
			android:paddingBottom="20dp"
			android:contentDescription="@string/contentdesc_ldslogo"
			android:src="@raw/lds_logo">
		</ImageView>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:paddingLeft="40dp"
			android:paddingRight="40dp"
			android:paddingBottom="40dp"
			android:text="@string/ldsinfo">
		</TextView>
		<Button
			android:id="@+id/LDS_Button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/ldsbuttontext">
		</Button>
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:padding="4dp">
		</TextView>
	</LinearLayout>
</ScrollView>